# conch

./: .gitignore  AGENTS.md  README.md  fake.key  happy-path-test.sh  main.py  pyproject.toml
.devcontainer/: README.md  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
devlog/: 2025-08-14.md  2025-08-15.md  2025-08-16-copilot.md  2025-08-16-gh-cas.md  2025-08-16.md  2025-08-17.md  2025-08-18-copilot.md  2025-08-18.md  2025-08-19.md  2025-08-20.md  2025-08-29-codex-cli-pitch.md  2025-08-29-gpt5-max-completion-tokens.md  2025-08-29-openai-models-pitch.md  2025-08-29-pitch-3-document-ai-mode.md  2025-09-04.md  mantra.md  pitch-template.md  plan.md  repl.md
docs/: plan-ai.md
modules/Chasm/: Chasm.psd1  Chasm.psm1
src/: pyperclip.py
src/conch/: anthropic.py  cas.py  commands.py  config.py  files.py  logview.py  mvp.py  openai_client.py  sam.py  tui.py
src/glistend/: main.py
src/httpx/: __init__.py
src/rich/: __init__.py  segment.py  text.py
src/scripts/: cas_demo.py  conversation_demo.py  highlight.py  sam_parser_demo.py
src/textual/: __init__.py  app.py  containers.py  (+3 more)
tests/: test_adhoc.py  test_ai_error_handling.py  test_ai_help_text.py  test_anthropic_tool_use.py  test_cas.py  test_command_w.py  test_delete_selection.py  test_directory_listing.py  test_dot_movement.py  test_fs.py  test_gf_command.py  test_help_text.py  test_logview.py  test_logview_title_and_append.py  test_model_command.py  test_openai_gpt5_tokens.py  test_sam.py  test_sam_command.py  test_use_model_command.py  test_use_openai_model_command.py
