[project]
name = "conch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyperclip>=1.9.0",
    "textual>=0.24",
]

[project.scripts]
conch = "conch.tui:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=9.4.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
